fix: update Docker repository configuration for improved compatibility with Ubuntu and Raspbian

--- a/ansible/roles/system/tasks/main.yml
+++ b/ansible/roles/system/tasks/main.yml
@@ -82,24 +82,25 @@
       {% else %}
         amd64
       {% endif %}
-
+      
 - name: Add Docker repository
   lineinfile:
     path: /etc/apt/sources.list.d/docker.list
     create: yes
     line: >-
-      deb [arch={{ architecture }}] 
-      {% if ansible_architecture in ['aarch64','armv7l','armv6l'] %}
-        https://download.docker.com/linux/raspbian {{ distro_codename.stdout }} stable
-      {% elif ansible_distribution == 'Ubuntu' %}
-        https://download.docker.com/linux/ubuntu {{ distro_codename.stdout }} stable
+      deb [arch={{ architecture }}]
+      {% if ansible_distribution == 'Ubuntu' %}
+      https://download.docker.com/linux/ubuntu {{ distro_codename.stdout }} stable
+      {% elif ansible_distribution == 'Raspbian' %}
+      https://download.docker.com/linux/raspbian {{ distro_codename.stdout }} stable
       {% else %}
-        https://download.docker.com/linux/debian {{ distro_codename.stdout }} stable
+      https://download.docker.com/linux/debian {{ distro_codename.stdout }} stable
       {% endif %}
     state: present
     owner: root
     group: root
     mode: '0644'
+
 
 - name: Install Docker packages
   apt:
