fix: correct comment formatting in Docker installation section of main.yml

--- a/ansible/roles/system/tasks/main.yml
+++ b/ansible/roles/system/tasks/main.yml
@@ -36,7 +36,7 @@
     enabled: yes
     state: restarted
 
-# ---------------- Docker Installation ----------------
+# ---------------- Docker Installation ---ss-------------
 
 - name: Make sure distro package of Docker is absent
   ansible.builtin.apt:
