--- a/.github/workflows/build-grafana.yml
+++ b/.github/workflows/build-grafana.yml
@@ -1,4 +1,4 @@
-name: Build and Push Grafana Image and Push to docker
+name: Build and Push Grafana Image
 
 on: 
   push:
@@ -6,38 +6,60 @@ on:
       - master
     paths:
       - 'grafana/**' 
+
 jobs:
-  push_to_registry:
-    name: push docker image to hub
-    runs-on: ubuntu-latest
+  buildx:
+    name: Build & Push Grafana Image
+    runs-on: ubuntu-24.04
+    strategy:
+      matrix:
+        include:
+          - board: pi1
+            platform: linux/arm/v6
+          - board: pi2
+            platform: linux/arm/v7
+          - board: pi3
+            platform: linux/arm/v7
+          - board: pi4
+            platform: linux/arm/v7
+          - board: pi4-64
+            platform: linux/arm64/v8
+          - board: pi5
+            platform: linux/arm64/v8
+          - board: x86
+            platform: linux/amd64
     steps:
-      - name: check repository
+      - name: Checkout repository
         uses: actions/checkout@v4
-        
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-            path: /tmp/.buildx-cache
-            key: ${{ runner.os }}-buildx-${{ github.sha }}
-            restore-keys: |
-              ${{ runner.os }}-buildx-
-              
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to docker registry
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache/${{ matrix.board }}
+          key: buildx-grafana-${{ matrix.board }}-${{ github.sha }}
+          restore-keys: |
+            buildx-grafana-${{ matrix.board }}-
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{secrets.DOCKERHUB_USERNAME}}
-          password: ${{secrets.DOCKERHUB_PASSWORD}}
-          
-      - name: build and push grafana image
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build & Push Grafana image
         uses: docker/build-push-action@v5
         with:
           context: ./grafana
           file: ./grafana/Dockerfile
-          no-cache: true 
           push: true
+          cache-from: type=local,src=/tmp/.buildx-cache/${{ matrix.board }}
+          cache-to: type=local,dest=/tmp/.buildx-cache/${{ matrix.board }},mode=max
           tags: |
-            iotistic/grafana:latest  
-  
+            iotistic/grafana:${{ matrix.board }}
+            iotistic/grafana:latest
