Update Grafana image tags in build workflow

--- a/.github/workflows/build-grafana.yml
+++ b/.github/workflows/build-grafana.yml
@@ -61,5 +61,4 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache/${{ matrix.board }}
           cache-to: type=local,dest=/tmp/.buildx-cache/${{ matrix.board }},mode=max
           tags: |
-            iotistic/grafana:${{ matrix.board }}
-            iotistic/grafana:latest
+            iotistic/grafana:latest-${{ matrix.board }}
