Add platform support to Grafana build workflow

--- a/.github/workflows/build-grafana.yml
+++ b/.github/workflows/build-grafana.yml
@@ -58,7 +58,9 @@ jobs:
           context: ./grafana
           file: ./grafana/Dockerfile
           push: true
+          platforms: ${{ matrix.platform }}
           cache-from: type=local,src=/tmp/.buildx-cache/${{ matrix.board }}
           cache-to: type=local,dest=/tmp/.buildx-cache/${{ matrix.board }},mode=max
           tags: |
             iotistic/grafana:latest-${{ matrix.board }}
+
