--- a/.github/workflows/build-zemfyre-admin.yml
+++ b/.github/workflows/build-zemfyre-admin.yml
@@ -1,11 +1,13 @@
 name: Build and Push Admin Image
 
-on: 
+on:
   push:
     branches:
       - master
     paths:
-      - 'admin/**' 
+      - 'admin/**'
+  release:
+    types: [published]
 
 jobs:
   buildx:
@@ -40,7 +42,7 @@ jobs:
           path: /tmp/.buildx-cache/${{ matrix.board }}
           key: buildx-admin-${{ matrix.board }}-${{ github.sha }}
           restore-keys: |
-            buildx-grafana-${{ matrix.board }}-
+            buildx-admin-${{ matrix.board }}-
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -58,4 +60,4 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache/${{ matrix.board }}
           cache-to: type=local,dest=/tmp/.buildx-cache/${{ matrix.board }},mode=max
           tags: |
-            iotistic/zemfyre-admin:latest-${{ matrix.board }}
+            iotistic/zemfyre-admin:${{ github.event_name == 'release' && github.event.release.tag_name || 'latest' }}-${{ matrix.board }}
