Update Docker Compose architecture variable and binary version

--- a/ansible/roles/system/tasks/main.yml
+++ b/ansible/roles/system/tasks/main.yml
@@ -157,7 +157,7 @@
 
 - name: Set Docker Compose architecture variable
   ansible.builtin.set_fact:
-    compose_arch: "{{ 'x86_64' if system_arch.stdout == 'x86_64' else 'aarch64' if system_arch.stdout == 'aarch64' else 'armv7' }}"
+    compose_arch: "{{ 'x86_64' if system_arch.stdout == 'x86_64' else 'aarch64' if system_arch.stdout == 'aarch64' else 'arm' }}"
 
 - name: Create CLI plugins directory
   ansible.builtin.file:
@@ -169,7 +169,7 @@
 
 - name: Download Docker Compose V2 binary
   ansible.builtin.get_url:
-    url: "https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-linux-{{ compose_arch }}"
+    url: "https://github.com/docker/compose/releases/download/v2.39.4/docker-compose-linux-{{ compose_arch }}"
     dest: "/usr/local/lib/docker/cli-plugins/docker-compose"
     mode: '0755'
     owner: root
@@ -183,6 +183,7 @@
 - name: Display Docker Compose version
   ansible.builtin.debug:
     msg: "Docker Compose version: {{ compose_version.stdout }}"
+
 
 - name: Perform system upgrade
   ansible.builtin.apt:
