--- a/ansible/roles/system/tasks/main.yml
+++ b/ansible/roles/system/tasks/main.yml
@@ -38,152 +38,115 @@
 
 # ---------------- Docker Installation ---ss-------------
 
-# - name: Make sure distro package of Docker is absent
-#   ansible.builtin.apt:
-#     name:
-#       - docker
-#       - docker-engine
-#       - docker.io
-#       - containerd
-#       - runc
-#       - docker-compose
-#     state: absent
+- name: Make sure distro package of Docker is absent
+  ansible.builtin.apt:
+    name:
+      - docker
+      - docker-engine
+      - docker.io
+      - containerd
+      - runc
+      - docker-compose
+    state: absent
 
-# - name: Add Docker apt key (x86)
-#   ansible.builtin.apt_key:
-#     url: https://download.docker.com/linux/debian/gpg
-#     state: present
-#   when: ansible_architecture == "x86_64"
+- name: Add Docker apt key (x86)
+  ansible.builtin.apt_key:
+    url: https://download.docker.com/linux/debian/gpg
+    state: present
+  when: ansible_architecture == "x86_64"
 
-# - name: Add Docker apt key (Raspberry Pi)
-#   ansible.builtin.apt_key:
-#     url: https://download.docker.com/linux/raspbian/gpg
-#     state: present
-#   when: |
-#     ansible_architecture == "aarch64" or
-#     ansible_architecture == "armv7l" or
-#     ansible_architecture == "armv6l"
+- name: Add Docker apt key (Raspberry Pi)
+  ansible.builtin.apt_key:
+    url: https://download.docker.com/linux/raspbian/gpg
+    state: present
+  when: |
+    ansible_architecture == "aarch64" or
+    ansible_architecture == "armv7l" or
+    ansible_architecture == "armv6l"
 
-# - name: Get Debian name
-#   ansible.builtin.command: lsb_release -cs
-#   register: debian_name
-#   changed_when: false
-
-# - name: Check system bit width
-#   ansible.builtin.command: getconf LONG_BIT
-#   register: system_bits
-#   changed_when: false
-
-# - name: Set architecture
-#   ansible.builtin.set_fact:
-#     architecture: >-
-#       {{
-#         'amd64' if ansible_architecture == 'x86_64'
-#         else ('arm64' if device_type == 'pi4' and system_bits.stdout == '64'
-#         else 'armhf')
-#       }}
-#   when: |
-#     device_type == "pi1" or
-#     device_type == "pi2" or
-#     device_type == "pi3" or
-#     device_type == "pi4" or
-#     device_type == "x86"
-
-# - name: Set architecture
-#   ansible.builtin.set_fact:
-#     architecture: "arm64"
-#   when: device_type == "pi5"
-
-# - name: Add Docker repo
-#   ansible.builtin.lineinfile:
-#     path: /etc/apt/sources.list.d/docker.list
-#     create: true
-#     line: "deb [arch={{ architecture }}] https://download.docker.com/linux/debian {{ debian_name.stdout }} stable"
-#     state: present
-#     owner: root
-#     group: root
-#     mode: "0644"
-
-# - name: Install Docker
-#   ansible.builtin.apt:
-#     name:
-#       - docker-ce:{{ architecture }}
-#       - docker-ce-cli:{{ architecture }}
-#       - docker-compose-plugin:{{ architecture }}
-#     update_cache: true
-#     install_recommends: false
-
-# - name: Add user to Docker group (all platforms)
-#   ansible.builtin.user:
-#     name: "{{ lookup('env', 'USER') }}"
-#     group: "{{ lookup('env', 'USER') }}"
-#     groups:
-#       - docker
-#       - adm
-#       - sudo
-#       - video
-#       - plugdev
-#       - users
-#       - input
-#       - netdev
-#       - dialout
-
-# - name: Add user to Docker group (Raspberry Pi)
-#   ansible.builtin.user:
-#     name: "{{ lookup('env', 'USER') }}"
-#     group: "{{ lookup('env', 'USER') }}"
-#     groups:
-#       - docker
-#       - adm
-#       - sudo
-#       - video
-#       - plugdev
-#       - users
-#       - input
-#       - netdev
-#       - gpio
-#       - dialout
-#   when: |
-#     ansible_architecture == "aarch64" or
-#     ansible_architecture == "armv7l" or
-#     ansible_architecture == "armv6l"
-
-# ---------------- Docker Compose V2 Plugin -----------------
-
-- name: Get system architecture for Docker Compose
-  ansible.builtin.command: uname -m
-  register: system_arch
+- name: Get Debian name
+  ansible.builtin.command: lsb_release -cs
+  register: debian_name
   changed_when: false
 
-- name: Set Docker Compose architecture variable
+- name: Check system bit width
+  ansible.builtin.command: getconf LONG_BIT
+  register: system_bits
+  changed_when: false
+
+- name: Set architecture
   ansible.builtin.set_fact:
-    compose_arch: "{{ 'x86_64' if system_arch.stdout == 'x86_64' else 'aarch64' if system_arch.stdout == 'aarch64' else 'arm' }}"
+    architecture: >-
+      {{
+        'amd64' if ansible_architecture == 'x86_64'
+        else ('arm64' if device_type == 'pi4' and system_bits.stdout == '64'
+        else 'armhf')
+      }}
+  when: |
+    device_type == "pi1" or
+    device_type == "pi2" or
+    device_type == "pi3" or
+    device_type == "pi4" or
+    device_type == "x86"
 
-- name: Create CLI plugins directory
-  ansible.builtin.file:
-    path: "/usr/local/lib/docker/cli-plugins"
-    state: directory
+- name: Set architecture
+  ansible.builtin.set_fact:
+    architecture: "arm64"
+  when: device_type == "pi5"
+
+- name: Add Docker repo
+  ansible.builtin.lineinfile:
+    path: /etc/apt/sources.list.d/docker.list
+    create: true
+    line: "deb [arch={{ architecture }}] https://download.docker.com/linux/debian {{ debian_name.stdout }} stable"
+    state: present
     owner: root
     group: root
-    mode: "0755"
+    mode: "0644"
 
-- name: Download Docker Compose V2 binary
-  ansible.builtin.get_url:
-    url: "https://github.com/docker/compose/releases/download/v2.39.4/docker-compose-linux-{{ compose_arch }}"
-    dest: "/usr/local/lib/docker/cli-plugins/docker-compose"
-    mode: '0755'
-    owner: root
-    group: root
+- name: Install Docker
+  ansible.builtin.apt:
+    name:
+      - docker-ce:{{ architecture }}
+      - docker-ce-cli:{{ architecture }}
+      - docker-compose-plugin:{{ architecture }}
+    update_cache: true
+    install_recommends: false
 
-- name: Verify docker compose installation
-  ansible.builtin.command: docker compose version
-  register: compose_version
-  changed_when: false
+- name: Add user to Docker group (all platforms)
+  ansible.builtin.user:
+    name: "{{ lookup('env', 'USER') }}"
+    group: "{{ lookup('env', 'USER') }}"
+    groups:
+      - docker
+      - adm
+      - sudo
+      - video
+      - plugdev
+      - users
+      - input
+      - netdev
+      - dialout
 
-- name: Display Docker Compose version
-  ansible.builtin.debug:
-    msg: "Docker Compose version: {{ compose_version.stdout }}"
-
+- name: Add user to Docker group (Raspberry Pi)
+  ansible.builtin.user:
+    name: "{{ lookup('env', 'USER') }}"
+    group: "{{ lookup('env', 'USER') }}"
+    groups:
+      - docker
+      - adm
+      - sudo
+      - video
+      - plugdev
+      - users
+      - input
+      - netdev
+      - gpio
+      - dialout
+  when: |
+    ansible_architecture == "aarch64" or
+    ansible_architecture == "armv7l" or
+    ansible_architecture == "armv6l"
 
 - name: Perform system upgrade
   ansible.builtin.apt:
