--- a/application-manager/package.json
+++ b/application-manager/package.json
@@ -38,6 +38,7 @@
     "typed-error": "^3.2.1"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.11",
     "@types/bluebird": "^3.5.42",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
