--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,19 +1,21 @@
 services:
     application-manager:
-        build:
-            context: ./application-manager
-            dockerfile: Dockerfile
-        privileged: true
-        tty: true
-        restart: always
-        network_mode: host
-        ports:
-          - "${APP_MANAGER_PORT_EXT:-53002}:3002"
-        volumes:
-          - /var/run/docker.sock:/var/run/docker.sock
-        environment:
-          - USE_REAL_DOCKER=true
-          - NODE_ENV=production
+            build:
+                context: ./application-manager
+                dockerfile: Dockerfile
+            privileged: true
+            tty: true
+            restart: always
+            network_mode: host
+            ports:
+            - "${APP_MANAGER_PORT_EXT:-53002}:3002"
+            volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
+            - application-manager-data:/app/data
+            environment:
+            - USE_REAL_DOCKER=true
+            - NODE_ENV=production
+            - DATABASE_PATH=/app/data/database.sqlite
     nginx:
         image: nginx
         ports:
@@ -127,6 +129,9 @@ services:
             - "${API_PORT_EXT:-53001}:3001"
         networks:
            - zemfyre-net
+volumes:
+  application-manager-data:
+    driver: local
  
 networks:
   zemfyre-net:
