refactor: Add container_name definition for application-manager in docker-compose files

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,6 @@
 services:
     application-manager:
+            container_name: application-manager
             build:
                 context: ./application-manager
                 dockerfile: Dockerfile
