--- a/application-manager/package.json
+++ b/application-manager/package.json
@@ -9,6 +9,7 @@
     "watch": "tsc --watch",
     "clean": "rimraf dist",
     "dev": "tsx watch src/api/server.ts",
+    "dev:livepush": "tsx src/cli/livepush-dev.ts",
     "start": "node dist/api/server.js",
     "start:docker": "USE_REAL_DOCKER=true node dist/api/server.js",
     "lint": "eslint src --ext .ts",
@@ -26,16 +27,18 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
+    "chokidar": "^3.5.3",
     "cors": "^2.8.5",
     "dockerode": "^4.0.2",
     "express": "^4.18.2",
     "fp-ts": "^2.16.5",
     "io-ts": "2.2.20",
     "knex": "^3.1.0",
+    "livepush": "^2.0.0",
     "lodash": "^4.17.21",
     "sqlite3": "^5.1.6",
     "strict-event-emitter-types": "^2.0.0",
-     "systeminformation": "^5.23.5",
+    "systeminformation": "^5.23.5",
     "typed-error": "^3.2.1"
   },
   "devDependencies": {
