--- a/application-manager/package.json
+++ b/application-manager/package.json
@@ -25,6 +25,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/mqtt": "^0.0.34",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
     "chokidar": "^3.5.3",
@@ -36,6 +37,7 @@
     "knex": "^3.1.0",
     "livepush": "^2.0.0",
     "lodash": "^4.17.21",
+    "mqtt": "^5.14.1",
     "sqlite3": "^5.1.6",
     "strict-event-emitter-types": "^2.0.0",
     "systeminformation": "^5.23.5",
