--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,6 +15,7 @@ services:
             - USE_REAL_DOCKER=true
             - NODE_ENV=production
             - DATABASE_PATH=/app/data/database.sqlite
+            - MQTT_BROKER=mqtt://mosquitto:1883
     nginx:
         image: nginx
         ports:
