feat: Add MQTT broker environment variable and enable file logging in application manager

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,6 +16,7 @@ services:
             - NODE_ENV=production
             - DATABASE_PATH=/app/data/database.sqlite
             - MQTT_BROKER=mqtt://mosquitto:1883
+            - ENABLE_FILE_LOGGING=false
     nginx:
         image: nginx
         ports:
