feat(logging): Configure log settings via environment variables for application manager

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,6 +17,7 @@ services:
             - DATABASE_PATH=/app/data/database.sqlite
             - MQTT_BROKER=mqtt://mosquitto:1883
             - ENABLE_FILE_LOGGING=false
+            - MAX_LOGS=500
     nginx:
         image: nginx
         ports:
