--- a/.github/workflows/build-application-manager.yml
+++ b/.github/workflows/build-application-manager.yml
@@ -1,4 +1,4 @@
-name: Build and Push Application Manager
+name: Build, Test & Push Application Manager
 
 on: 
   push:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   buildx:
-    name: Build & Push Application Manager
+    name: Build & Test & Push Application Manager
     runs-on: ubuntu-24.04
     strategy:
       matrix:
@@ -22,6 +22,7 @@ jobs:
             platform: linux/arm64/v8
           - board: x86
             platform: linux/amd64
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -40,13 +41,37 @@ jobs:
           restore-keys: |
             buildx-manager-${{ matrix.board }}-
 
+      # Build locally but DO NOT push yet
+      - name: Build image (local only)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./application-manager
+          file: ./application-manager/Dockerfile
+          load: true   # makes image available to docker run
+          platforms: ${{ matrix.platform }}
+          cache-from: type=local,src=/tmp/.buildx-cache/${{ matrix.board }}
+          cache-to: type=local,dest=/tmp/.buildx-cache/${{ matrix.board }},mode=max
+          tags: |
+            iotistic/application-manager:test-${{ matrix.board }}
+
+      - name: Run tests
+        run: |
+          docker run --rm \
+            --platform ${{ matrix.platform }} \
+            -v ${{ github.workspace }}/application-manager/test:/app/test \
+            iotistic/application-manager:test-${{ matrix.board }} \
+            bash /app/test/ci-test.sh
+
       - name: Login to Docker Hub
+        if: success()
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build & Push Application Manager
+      # Build again but this time PUSH to registry
+      - name: Build & Push final image
+        if: success()
         uses: docker/build-push-action@v5
         with:
           context: ./application-manager
