--- a/.github/workflows/build-application-manager.yml
+++ b/.github/workflows/build-application-manager.yml
@@ -62,6 +62,7 @@ jobs:
             -v /var/run/docker.sock:/var/run/docker.sock \
             -v ${{ github.workspace }}/application-manager/test:/app/test \
             -e API_URL="http://localhost:3002" \
+            -e MQTT_BROKER="mqtt://mosquitto:1883" \
             iotistic/application-manager:test-${{ matrix.board }} \
             bash -c "
               # Start app in background
