fix(Dockerfile): include .yarnrc.yml in package files copy

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -9,7 +9,7 @@ RUN corepack enable && corepack prepare yarn@4.9.2 --activate
 WORKDIR /app
 
 # Copy package files
-COPY package.json yarn.lock ./
+COPY package.json yarn.lock .yarnrc.yml ./
 
 # Install dependencies
 RUN yarn install
