fix(Dockerfile): add build argument for API URL configuration

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -17,6 +17,10 @@ RUN yarn install
 # Copy source code
 COPY . .
 
+# Build argument for API URL
+ARG VITE_API_URL=http://localhost:3002
+ENV VITE_API_URL=$VITE_API_URL
+
 # Build the application
 RUN yarn build:ci
 
